@@ -16,8 +16,11 @@ hockeypuck (0.6~a1) precise; urgency=low
   * debian/mkdists, debian/rules, Makefile:
     - Remove hockeypuck-pq from binary packages, its not ready for that.
     - Add helper script for slinging multi-distro source packages.
+  * cmd/hockeypuck-load/main.go:
+    - Add hockeypuck -mail-add option for receiving PKS inbound keys.
+      LP: #1075379
 
- -- Casey Marshall <casey.marshall@gazzang.com>  Sun, 04 Nov 2012 17:44:31 -0600
+ -- Casey Marshall <casey.marshall@gazzang.com>  Wed, 07 Nov 2012 23:41:03 -0600
 
 hockeypuck (0.5) precise; urgency=low
 
